--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(#2b1055, #465b88);
+  background: linear-gradient(#2b1055, #5e77ac);
 }
 
 body ul li a {
@@ -18,25 +18,21 @@ body ul li a:hover {
   padding-top: 100px;
 }
 
-#about {
-  padding: 250px;
-}
-#project {
-  margin-bottom: 100px;
+#social {
+  padding: 100px;
 }
 
-.social {
-  padding-left: 100px;
-}
 .tombol {
-  padding-left: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 footer {
-  padding-bottom: 100px;
   background-color: black;
+  padding-bottom: 10px;
 }
 
 section {
-  padding-top: 5rem;
+  padding-top: 200px;
+  padding-bottom: 100px;
 }
